flexBison/parser.output
Grammar

    0 $accept: program $end

    1 program: block

    2 block: HORA_DE_BRILHAR '\n' days SEMPRE_DIVA '\n'

    3 days: days day
    4     | day

    5 day: GRUNIDO '\n' statements A_MIMIR '\n'

    6 statements: statement
    7           | statements statement

    8 block_statements: BLOCK_BEGIN '\n' statements BLOCK_END '\n'

    9 statement: TASK_DECLARATION
   10          | ACTION_DECLARATION
   11          | WHILE_STATEMENT
   12          | IF_STATEMENT
   13          | HABLAR_STATEMENT

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION '(' STRING ',' NUMBER ')' '\n'

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION '(' STRING ',' NUMBER ')' '\n'

   16 WHILE_STATEMENT: ENQUANTO_ELA_NAO_MUDA_DE_IDEIA CONDICIONAL '\n' block_statements

   17 IF_STATEMENT: SE CONDICIONAL '\n' block_statements

   18 HABLAR_STATEMENT: HABLAR '(' STRING ',' NUMBER ')' '\n'

   19 CONDICIONAL: TAREFA DOT STRING


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 2 5 8 14 15 16 17 18
    '(' (40) 14 15 18
    ')' (41) 14 15 18
    ',' (44) 14 15 18
    error (256)
    STRING <string> (258) 14 15 18 19
    NUMBER <integer> (259) 14 15 18
    HORA_DE_BRILHAR (260) 2
    A_MIMIR (261) 5
    SEMPRE_DIVA (262) 2
    GRUNIDO (263) 5
    ENQUANTO_ELA_NAO_MUDA_DE_IDEIA (264) 16
    SE (265) 17
    TAREFA_DECLARATION (266) 14
    ACAO_DECLARATION (267) 15
    TAREFA (268) 14 19
    ACAO (269) 15
    DOT (270) 19
    HABLAR (271) 18
    BLOCK_BEGIN (272) 8
    BLOCK_END (273) 8


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    program (24)
        on left: 1
        on right: 0
    block (25)
        on left: 2
        on right: 1
    days (26)
        on left: 3 4
        on right: 2 3
    day (27)
        on left: 5
        on right: 3 4
    statements (28)
        on left: 6 7
        on right: 5 7 8
    block_statements (29)
        on left: 8
        on right: 16 17
    statement (30)
        on left: 9 10 11 12 13
        on right: 6 7
    TASK_DECLARATION (31)
        on left: 14
        on right: 9
    ACTION_DECLARATION (32)
        on left: 15
        on right: 10
    WHILE_STATEMENT (33)
        on left: 16
        on right: 11
    IF_STATEMENT (34)
        on left: 17
        on right: 12
    HABLAR_STATEMENT (35)
        on left: 18
        on right: 13
    CONDICIONAL (36)
        on left: 19
        on right: 16 17


State 0

    0 $accept: • program $end

    HORA_DE_BRILHAR  shift, and go to state 1

    program  go to state 2
    block    go to state 3


State 1

    2 block: HORA_DE_BRILHAR • '\n' days SEMPRE_DIVA '\n'

    '\n'  shift, and go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: block •

    $default  reduce using rule 1 (program)


State 4

    2 block: HORA_DE_BRILHAR '\n' • days SEMPRE_DIVA '\n'

    GRUNIDO  shift, and go to state 6

    days  go to state 7
    day   go to state 8


State 5

    0 $accept: program $end •

    $default  accept


State 6

    5 day: GRUNIDO • '\n' statements A_MIMIR '\n'

    '\n'  shift, and go to state 9


State 7

    2 block: HORA_DE_BRILHAR '\n' days • SEMPRE_DIVA '\n'
    3 days: days • day

    SEMPRE_DIVA  shift, and go to state 10
    GRUNIDO      shift, and go to state 6

    day  go to state 11


State 8

    4 days: day •

    $default  reduce using rule 4 (days)


State 9

    5 day: GRUNIDO '\n' • statements A_MIMIR '\n'

    ENQUANTO_ELA_NAO_MUDA_DE_IDEIA  shift, and go to state 12
    SE                              shift, and go to state 13
    TAREFA                          shift, and go to state 14
    ACAO                            shift, and go to state 15
    HABLAR                          shift, and go to state 16

    statements          go to state 17
    statement           go to state 18
    TASK_DECLARATION    go to state 19
    ACTION_DECLARATION  go to state 20
    WHILE_STATEMENT     go to state 21
    IF_STATEMENT        go to state 22
    HABLAR_STATEMENT    go to state 23


State 10

    2 block: HORA_DE_BRILHAR '\n' days SEMPRE_DIVA • '\n'

    '\n'  shift, and go to state 24


State 11

    3 days: days day •

    $default  reduce using rule 3 (days)


State 12

   16 WHILE_STATEMENT: ENQUANTO_ELA_NAO_MUDA_DE_IDEIA • CONDICIONAL '\n' block_statements

    TAREFA  shift, and go to state 25

    CONDICIONAL  go to state 26


State 13

   17 IF_STATEMENT: SE • CONDICIONAL '\n' block_statements

    TAREFA  shift, and go to state 25

    CONDICIONAL  go to state 27


State 14

   14 TASK_DECLARATION: TAREFA • TAREFA_DECLARATION '(' STRING ',' NUMBER ')' '\n'

    TAREFA_DECLARATION  shift, and go to state 28


State 15

   15 ACTION_DECLARATION: ACAO • ACAO_DECLARATION '(' STRING ',' NUMBER ')' '\n'

    ACAO_DECLARATION  shift, and go to state 29


State 16

   18 HABLAR_STATEMENT: HABLAR • '(' STRING ',' NUMBER ')' '\n'

    '('  shift, and go to state 30


State 17

    5 day: GRUNIDO '\n' statements • A_MIMIR '\n'
    7 statements: statements • statement

    A_MIMIR                         shift, and go to state 31
    ENQUANTO_ELA_NAO_MUDA_DE_IDEIA  shift, and go to state 12
    SE                              shift, and go to state 13
    TAREFA                          shift, and go to state 14
    ACAO                            shift, and go to state 15
    HABLAR                          shift, and go to state 16

    statement           go to state 32
    TASK_DECLARATION    go to state 19
    ACTION_DECLARATION  go to state 20
    WHILE_STATEMENT     go to state 21
    IF_STATEMENT        go to state 22
    HABLAR_STATEMENT    go to state 23


State 18

    6 statements: statement •

    $default  reduce using rule 6 (statements)


State 19

    9 statement: TASK_DECLARATION •

    $default  reduce using rule 9 (statement)


State 20

   10 statement: ACTION_DECLARATION •

    $default  reduce using rule 10 (statement)


State 21

   11 statement: WHILE_STATEMENT •

    $default  reduce using rule 11 (statement)


State 22

   12 statement: IF_STATEMENT •

    $default  reduce using rule 12 (statement)


State 23

   13 statement: HABLAR_STATEMENT •

    $default  reduce using rule 13 (statement)


State 24

    2 block: HORA_DE_BRILHAR '\n' days SEMPRE_DIVA '\n' •

    $default  reduce using rule 2 (block)


State 25

   19 CONDICIONAL: TAREFA • DOT STRING

    DOT  shift, and go to state 33


State 26

   16 WHILE_STATEMENT: ENQUANTO_ELA_NAO_MUDA_DE_IDEIA CONDICIONAL • '\n' block_statements

    '\n'  shift, and go to state 34


State 27

   17 IF_STATEMENT: SE CONDICIONAL • '\n' block_statements

    '\n'  shift, and go to state 35


State 28

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION • '(' STRING ',' NUMBER ')' '\n'

    '('  shift, and go to state 36


State 29

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION • '(' STRING ',' NUMBER ')' '\n'

    '('  shift, and go to state 37


State 30

   18 HABLAR_STATEMENT: HABLAR '(' • STRING ',' NUMBER ')' '\n'

    STRING  shift, and go to state 38


State 31

    5 day: GRUNIDO '\n' statements A_MIMIR • '\n'

    '\n'  shift, and go to state 39


State 32

    7 statements: statements statement •

    $default  reduce using rule 7 (statements)


State 33

   19 CONDICIONAL: TAREFA DOT • STRING

    STRING  shift, and go to state 40


State 34

   16 WHILE_STATEMENT: ENQUANTO_ELA_NAO_MUDA_DE_IDEIA CONDICIONAL '\n' • block_statements

    BLOCK_BEGIN  shift, and go to state 41

    block_statements  go to state 42


State 35

   17 IF_STATEMENT: SE CONDICIONAL '\n' • block_statements

    BLOCK_BEGIN  shift, and go to state 41

    block_statements  go to state 43


State 36

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION '(' • STRING ',' NUMBER ')' '\n'

    STRING  shift, and go to state 44


State 37

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION '(' • STRING ',' NUMBER ')' '\n'

    STRING  shift, and go to state 45


State 38

   18 HABLAR_STATEMENT: HABLAR '(' STRING • ',' NUMBER ')' '\n'

    ','  shift, and go to state 46


State 39

    5 day: GRUNIDO '\n' statements A_MIMIR '\n' •

    $default  reduce using rule 5 (day)


State 40

   19 CONDICIONAL: TAREFA DOT STRING •

    $default  reduce using rule 19 (CONDICIONAL)


State 41

    8 block_statements: BLOCK_BEGIN • '\n' statements BLOCK_END '\n'

    '\n'  shift, and go to state 47


State 42

   16 WHILE_STATEMENT: ENQUANTO_ELA_NAO_MUDA_DE_IDEIA CONDICIONAL '\n' block_statements •

    $default  reduce using rule 16 (WHILE_STATEMENT)


State 43

   17 IF_STATEMENT: SE CONDICIONAL '\n' block_statements •

    $default  reduce using rule 17 (IF_STATEMENT)


State 44

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION '(' STRING • ',' NUMBER ')' '\n'

    ','  shift, and go to state 48


State 45

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION '(' STRING • ',' NUMBER ')' '\n'

    ','  shift, and go to state 49


State 46

   18 HABLAR_STATEMENT: HABLAR '(' STRING ',' • NUMBER ')' '\n'

    NUMBER  shift, and go to state 50


State 47

    8 block_statements: BLOCK_BEGIN '\n' • statements BLOCK_END '\n'

    ENQUANTO_ELA_NAO_MUDA_DE_IDEIA  shift, and go to state 12
    SE                              shift, and go to state 13
    TAREFA                          shift, and go to state 14
    ACAO                            shift, and go to state 15
    HABLAR                          shift, and go to state 16

    statements          go to state 51
    statement           go to state 18
    TASK_DECLARATION    go to state 19
    ACTION_DECLARATION  go to state 20
    WHILE_STATEMENT     go to state 21
    IF_STATEMENT        go to state 22
    HABLAR_STATEMENT    go to state 23


State 48

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION '(' STRING ',' • NUMBER ')' '\n'

    NUMBER  shift, and go to state 52


State 49

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION '(' STRING ',' • NUMBER ')' '\n'

    NUMBER  shift, and go to state 53


State 50

   18 HABLAR_STATEMENT: HABLAR '(' STRING ',' NUMBER • ')' '\n'

    ')'  shift, and go to state 54


State 51

    7 statements: statements • statement
    8 block_statements: BLOCK_BEGIN '\n' statements • BLOCK_END '\n'

    ENQUANTO_ELA_NAO_MUDA_DE_IDEIA  shift, and go to state 12
    SE                              shift, and go to state 13
    TAREFA                          shift, and go to state 14
    ACAO                            shift, and go to state 15
    HABLAR                          shift, and go to state 16
    BLOCK_END                       shift, and go to state 55

    statement           go to state 32
    TASK_DECLARATION    go to state 19
    ACTION_DECLARATION  go to state 20
    WHILE_STATEMENT     go to state 21
    IF_STATEMENT        go to state 22
    HABLAR_STATEMENT    go to state 23


State 52

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION '(' STRING ',' NUMBER • ')' '\n'

    ')'  shift, and go to state 56


State 53

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION '(' STRING ',' NUMBER • ')' '\n'

    ')'  shift, and go to state 57


State 54

   18 HABLAR_STATEMENT: HABLAR '(' STRING ',' NUMBER ')' • '\n'

    '\n'  shift, and go to state 58


State 55

    8 block_statements: BLOCK_BEGIN '\n' statements BLOCK_END • '\n'

    '\n'  shift, and go to state 59


State 56

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION '(' STRING ',' NUMBER ')' • '\n'

    '\n'  shift, and go to state 60


State 57

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION '(' STRING ',' NUMBER ')' • '\n'

    '\n'  shift, and go to state 61


State 58

   18 HABLAR_STATEMENT: HABLAR '(' STRING ',' NUMBER ')' '\n' •

    $default  reduce using rule 18 (HABLAR_STATEMENT)


State 59

    8 block_statements: BLOCK_BEGIN '\n' statements BLOCK_END '\n' •

    $default  reduce using rule 8 (block_statements)


State 60

   14 TASK_DECLARATION: TAREFA TAREFA_DECLARATION '(' STRING ',' NUMBER ')' '\n' •

    $default  reduce using rule 14 (TASK_DECLARATION)


State 61

   15 ACTION_DECLARATION: ACAO ACAO_DECLARATION '(' STRING ',' NUMBER ')' '\n' •

    $default  reduce using rule 15 (ACTION_DECLARATION)
